@@ -469,5 +469,5 @@ static ErlDrvEntry driver_entry = {
 DRIVER_INIT(DRIVER_NAME)
 {
 
-	return &driver_entry;
+	return (&driver_entry);
 }
