@@ -4,6 +4,9 @@
 	c_src/exmpp_tls.h, c_src/exmpp_tls_openssl.c, c_src/Makefile.am: Use
 	exmpp_driver.c and remove duplicate code.
 
+	* c_src/exmpp_xml_expat_legacy.c, c_src/exmpp_xml_libxml2.c,
+	c_src/exmpp_xml_expat.c: style(9).
+
 2008-12-08  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	Fixed several warnings issued by Intel C Compiler.
